tests/machine/x/c/map_index.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/map_index.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/map_index.c:88:22: error: invalid initializer
   88 |   map_string_int m = (tmp_item_t){.a = 1, .b = 2};
      |                      ^

   1: // Generated by Mochi compiler v0.10.25 on 2025-07-14T03:19:51Z
